<resources>
    <string name="app_name">MatheusSimonProject1</string>

    <string name="babyPhotoDescription">Awesome Baby</string>

    <string name="babyReady">I am ready for the show</string>
    <string name="changeDiapers">Mamyy can you change my diapers?</string>
    <string name="settings">Settings</string>

    <string name="programName">Matheus Simon\'s Amazing Baby Event Recorder</string>
    <string name="programNextActivity">Record Activities?</string>
    <string name="funWithBaby">Fun with the Baby</string>

    <string name="floatingButtonDescription">Awesome floating button</string>
    <string name="dateSelection">Which Date?</string>
    <string name="returnToMain">Return to Main</string>

    <string name="delete">Delete</string>
    <string name="resetDB">Reset Database</string>
    <string name="explanation">My Baby App, is supposed to be a baby tracker app, which allows Mommys and Daddys
        to control their loved ones</string>

    <string name="event">Event</string>
    <string name="addbtn">Add</string>


</resources>